<resources>
    <string name="app_name">Obstickle avoider</string>
    <string name="banner_text">Welcome player!</string>
    <string name="banner_text_register">Obstickle Avoider</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="register_button_txt">Register user</string>
    <string name="title_activity_entry">Entry</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="entry_txt">Obstickle avoider</string>
    <string name="email_address_user_profile">Email Address:</string>
    <string name="points">Points:</string>
    <string name="reset_password">Reset password</string>
</resources>