<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/macondo_swash_caps"
        android:text="@string/banner_text"
        android:textAlignment="center"
        android:textColor="#180142"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="#B391F1"
        android:textColorLink="#B391F1"
        android:textSize="24sp"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:background="@android:color/transparent"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
       android:background="@android:color/transparent"
       android:ems="10"
       android:hint="@string/email_address"
       android:inputType="textEmailAddress"
       android:textColorHighlight="#B391F1"
       android:textColorLink="#B391F1"
       android:textCursorDrawable="@drawable/cursor"
       android:textSize="24sp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/banner" />

   <Button
       android:id="@+id/signIn"
       android:layout_width="380dp"
       android:layout_height="70dp"
       android:layout_marginTop="50dp"
       android:backgroundTint="@color/purple_200"
       android:fontFamily="@font/macondo_swash_caps"
       android:text="@string/login"
       android:textAllCaps="false"
       android:textColor="#180142"
       android:textSize="26sp"
       android:textStyle="bold"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/password" />

   <TextView
       android:id="@+id/forgotPassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/forgot_password"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@id/signIn"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="25dp"
       android:layout_marginStart="50dp"
       />

   <TextView
       android:id="@+id/register"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/register"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintTop_toTopOf="@id/forgotPassword"
       app:layout_constraintLeft_toRightOf="@id/forgotPassword"
       android:layout_marginStart="80dp"
       />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>